fix overlapping category dropdown and nav z-indices

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,7 +42,7 @@ nav {
   display: flex;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 10;
   flex-wrap: wrap;
   height: 3rem;
   padding-left: 1rem;
@@ -53,7 +53,7 @@ nav {
 .category-header {
   display: flex;
   justify-content: center;
-  align-items: baseline;
+  align-items: center;
 }
 
 .category-more {
@@ -65,7 +65,7 @@ nav {
   display: flex;
   position: absolute;
   flex-wrap: wrap;
-  z-index: 9999;
+  z-index: 1;
   background-color: var(--third-color);
   border-radius: 2px;
 }
